--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,12 +5,15 @@ body{
     background-image: linear-gradient(to left, rgb(103, 17, 165), rgb(105, 151, 165));
     color: aliceblue;
 }
+h1{
+    text-align: center;
+}
 
 form{
     position: absolute;
-    top: 20%;
-    left: 38%;
-    width: 18%;
+    top: 17%;
+    left: 28%;
+    width: 38%;
     /* margin: 0 auto; */
     /* margin-top: 300px; */
     border: 5px solid black;
@@ -19,7 +22,7 @@ form{
     font-size: 1.2rem;
     box-shadow: 2px 2px 8px 8px lightskyblue;
 }
-h1{
+.form-header{
     text-align: center;
     margin-top: 0;
 }
