--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,16 +9,45 @@ h1{
     text-align: center;
 }
 
-form{
-    position: absolute;
-    top: 17%;
-    left: 28%;
-    width: 38%;
+
+.main{
+    margin-top: 80px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    border: 5px solid black;
+    padding: 10px;
+}
+
+.image{
+ grid-area: 1/1/2/2;  
+ width: 100%; 
+ height: 100%;
+ margin-top: 0;
+ text-align: center;
+
+
+ /* height: 80%; */
+}
+img{
+    width: 100%;
+    height: 98%;
+    border-radius: 3%;
+    border: 5px solid black;
+    box-shadow: 2px 2px 8px 8px lightskyblue;
+    margin-top: 0;
+}
+
+.form{
+    margin: 0 auto;
+    grid-area: 1/2/2/3;
+
+    width: 85%;
     /* margin: 0 auto; */
     /* margin-top: 300px; */
     border: 5px solid black;
     padding: 20px;
-    border-radius: 7px;
+    border-radius: 15px;
     font-size: 1.2rem;
     box-shadow: 2px 2px 8px 8px lightskyblue;
 }
