--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,9 +14,11 @@ h1{
     margin-top: 80px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    /* grid-template-rows: 100px; */
     align-items: center;
     border: 5px solid black;
     padding: 10px;
+    
 }
 
 .image{
@@ -41,8 +43,8 @@ img{
 .form{
     margin: 0 auto;
     grid-area: 1/2/2/3;
-
-    width: 85%;
+    /* height: 100%; */
+    width: 88%;
     /* margin: 0 auto; */
     /* margin-top: 300px; */
     border: 5px solid black;
