--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,22 +36,28 @@ img{
     height: 98%;
     border-radius: 3%;
     border: 5px solid black;
-    box-shadow: 2px 2px 8px 8px lightskyblue;
+    box-shadow: 2px 2px 5px 5px lightskyblue;
     margin-top: 0;
 }
 
 .form{
-    margin: 0 auto;
+    /* margin: 0 auto; */
     grid-area: 1/2/2/3;
     /* height: 100%; */
     width: 88%;
+    margin-left: 50px;
+    margin-bottom: 8px;
+    margin-top: 1px;
     /* margin: 0 auto; */
     /* margin-top: 300px; */
     border: 5px solid black;
-    padding: 20px;
+    padding: 47px 20px;
     border-radius: 15px;
     font-size: 1.2rem;
-    box-shadow: 2px 2px 8px 8px lightskyblue;
+    box-shadow: 2px 2px 5px 5px lightskyblue;
+}
+form div{
+    padding-top: 5px;
 }
 .form-header{
     text-align: center;
